--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "github>renovate-config-ahd"
+    "github>ahdcreative/renovate-config-ahd"
   ]
 }
